# integrateCNV

./: README.md  example_notebook.ipynb  pyproject.toml
integratecnv/: __init__.py  prepare_regions.py  score.py
